--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="str_auto_login">自动登录</string>
     <string name="str_rem_passwd">记住密码</string>
     <string name="str_login">登录</string>
+    <string name="str_register">注册</string>
     <string name="str_passwd">密码</string>
     <string name="str_username">用户名</string>
     <string name="str_user_login">用户登录</string>
