--- a/giraffeplayer/src/main/res/values/strings.xml
+++ b/giraffeplayer/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">GiraffePlayer</string>
     <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>
-    <string name="small_problem">something error</string>
+    <string name="small_problem">视频出错了,请稍后重试</string>
     <string name="can_not_play">can not play this video</string>
     <string name="not_support">player not support this device</string>
     <string name="giraffe_player_track_type_unknown">unknown</string>
